--- a/build.gradle
+++ b/build.gradle
@@ -30,9 +30,11 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	//modImplementation "com.sk89q.worldedit:worldedit-fabric-mc1.18.1:7.2.9"
-	//modImplementation "com.sk89q.worldedit:worldedit-fabric-mc1.17.1:7.2.7"
-	//modImplementation "com.sk89q.worldedit:worldedit-core:7.2.7"
+
+	implementation("com.sk89q.worldedit:core:7.2.7")
+	implementation("com.sk89q.worldedit:fabric:7.2.7")
+	implementation("com.sk89q.worldedit:worldedit-core:7.2.7")
+	implementation("com.sk89q.worldedit:worldedit-fabric:7.2.7")
 }
 
 processResources {
